--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: ruby
+
 rvm:
   - 2.4
+
 script:
   - bundle exec jekyll build --future
   - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html --disable-external
+
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+sudo: false # route your build to the container-based infrastructure for a faster build
