--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 
 script:
   - bundle exec jekyll build --future
-  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html --disable-external
+  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --check-html
 
 env:
   global:
