Resize homepage-front image

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ instagram: igusername
 # Contact
 phone: "010-1234-5678" # This is my real number. You should text me.
 email: "hello@gmail.com" # This is my real email address. Please don't email me.
+apply-form: ""
 
 # Category
 collections:
