--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "HI-ARC | 홍익대학교 알고리즘 학회"
+title: "HI-ARC"
 fulltitle: "홍익대학교 알고리즘 학회<br>HI-ARC 공식블로그"
 tagline: ""
 url: "http://hi-arc.github.io" # The base hostname & protocol for your site. Use it if you need absolute URL's
