create intro page & competition tab

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,12 @@ apply-form: ""
 
 # Category
 collections:
-  - sections
+  sections:
+    output: false
+
+  lists:
+    output: true
+
 
 # Use this for production
 #sass:
