--- a/_data/activities/competitions/lists.yaml
+++ b/_data/activities/competitions/lists.yaml
@@ -1,11 +1,14 @@
-  - 2016:
-    - name: "삼성 대학생 프로그래밍 대회"
+- year: 2016
+  lists:
+  - name: "삼성 대학생 프로그래밍 대회"
 
-  - 2017:
-    - name: "ACM-ICPC Daejeon Region"
+- year: 2017
+  lists:
+  - name: "ACM-ICPC Daejeon Region"
 
-  - 2018:
-    - name: "ACM-ICPC Seoul Region"
-    - name: "UCPC"
-    - name: "카카오 Coding Festival"
-    - name: "이데일리 CODING CHALLENGE"
+- year: 2018
+  lists:
+  - name: "ACM-ICPC Seoul Region"
+  - name: "UCPC"
+  - name: "카카오 Coding Festival"
+  - name: "이데일리 CODING CHALLENGE"
