--- a/_data/activities/competitions/incampus.yaml
+++ b/_data/activities/competitions/incampus.yaml
@@ -13,25 +13,25 @@
 - year: 2017
   lists:
   - name: "정윤석"
-    rank: "3"
+    rank: "3등"
     prize: ""
   - name: "문준오"
-    rank: "6"
+    rank: "6등"
     prize: ""
   - name: "김민호"
-    rank: "7"
+    rank: "7등"
     prize: ""
   - name: "이재열"
-    rank: "9"
+    rank: "9등"
     prize: ""
   - name: "장영석"
-    rank: "12"
+    rank: "12등"
     prize: ""
   - name: "이승범"
-    rank: "16"
+    rank: "16등"
     prize: ""
   - name: "이준희"
-    rank: "18"
+    rank: "18등"
     prize: ""
 
 
