--- a/_data/activities/competitions/lists.yaml
+++ b/_data/activities/competitions/lists.yaml
@@ -9,6 +9,6 @@
 - year: 2018
   lists:
   - name: "ACM-ICPC Seoul Region"
-  - name: "UCPC"
+  - name: "UCPC 예선"
   - name: "카카오 Coding Festival"
   - name: "이데일리 CODING CHALLENGE"
