--- a/_data/activities/competitions/results/2018-acmicpc.yaml
+++ b/_data/activities/competitions/results/2018-acmicpc.yaml
@@ -3,6 +3,6 @@ competition: "ACM-ICPC Seoul Region"
 result: "Honorable mention"
 
 team: "bye-arc 팀"
-members: ["", "", ""]
+members: ["김민균(2기)", "김형석(2기)", "유지혁(3기)"]
 
 picture: "sample.jpg"
