--- a/_data/activities/competitions/results/2018-ucpc.yaml
+++ b/_data/activities/competitions/results/2018-ucpc.yaml
@@ -1,8 +1,8 @@
 year: 2018
-competition: "UCPC 인터넷 예선"
-result: "참여"
+competition: "UCPC 예선"
+result: "58th"
 
-team: "HI-ARC"
-members: []
+team: "KodingWarrior Squad"
+members: ["이재열(1기)", "문준오(1기)", "정연두(3기)"]
 
 picture: "sample.jpg"
