가입신청서 링크 갱신

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ instagram: igusername
 # Contact
 phone: "010-3955-9568" # This is my real number. You should text me.
 email: "98kimsungmin@naver.com" # This is my real email address. Please don't email me.
-apply-form: ""
+apply-form: "https://docs.google.com/forms/d/e/1FAIpQLSclQZY3uNLDHSX0lVQPYOqxdDxGnQWStHo-k5yx_YrYS4KzLA/viewform"
 
 # Category
 collections:
