--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,13 @@ googleplus: gusername
 instagram: igusername
 
 # Contact
-phone: "010-3955-9568" # This is my real number. You should text me.
-email: "98kimsungmin@naver.com" # This is my real email address. Please don't email me.
-apply-form: "https://goo.gl/rLH7PU"
+phone: "010-3955-9568"          # 대외 연락 담당자 전화번호
+email: "98kimsungmin@naver.com" # 대외 연락 담당자 이메일
+
+# Apply
+apply-form: "https://forms.gle/GREjuD8R5QZ4U91P8"
+apply-date: "2019년 9월 14일까지"
+joinable: false
 
 # Category
 collections:
