Change apply-date string value

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email: "98kimsungmin@naver.com" # 대외 연락 담당자 이메일
 
 # Apply
 apply-form: "https://forms.gle/GREjuD8R5QZ4U91P8"
-apply-date: "2019년 9월 14일까지"
+apply-date: "2019년 9월 14일"
 joinable: false
 
 # Category
