feat: FAQ 상세 페이지 최종 완성

--- a/_data/faqs/registration.yaml
+++ b/_data/faqs/registration.yaml
@@ -18,3 +18,30 @@
     - "asdsad"
     - "asdsad"
     - "asdsad"
+  - speaker: "admin"
+    messages: 
+    - "dddddd"
+    - "asdasd"
+  - speaker: "guest"
+    messages: 
+    - "asdsad"
+    - "asdsad"
+    - "asdsad"
+  - speaker: "admin"
+    messages: 
+    - "dddddd"
+    - "asdasd"
+  - speaker: "guest"
+    messages: 
+    - "asdsad"
+    - "asdsad"
+    - "asdsad"
+  - speaker: "admin"
+    messages: 
+    - "dddddd"
+    - "asdasd"
+  - speaker: "guest"
+    messages: 
+    - "asdsad"
+    - "asdsad"
+    - "asdsad"
