--- a/_data/faqs/activity.yaml
+++ b/_data/faqs/activity.yaml
@@ -31,4 +31,4 @@
     messages: 
     - "프로그래밍 대회에서 운 좋게 상을 받게 되면 이력서에 한 줄이라도 더 추가할 수 있습니다."
     - "상을 받지 못하게 되도 괜찮습니다. 꾸준히 참여해온 기록 만으로도 프로그래밍에 대한 관심을 정량적으로 드러내는 수단이 될 수 있습니다."
-    - "프로그래밍 대회 문제를 많이 참여하다보면 코딩테스트는 쉽게 보일 정도로 자신감도 생기게 되며, 구현 능력도 눈에 띄게 올라가게 됩니다."
+    - "프로그래밍 대회 문제를 많이 접하다보면 코딩테스트는 쉽게 보일 정도로 자신감도 생기게 되며, 구현 능력도 눈에 띄게 올라가게 됩니다."
