담당자 연락처 수정

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ googleplus: gusername
 instagram: igusername
 
 # Contact
-phone: "010-3955-9568"          # 대외 연락 담당자 전화번호
-email: "98kimsungmin@naver.com" # 대외 연락 담당자 이메일
+phone: "010-6375-7524"          # 대외 연락 담당자 전화번호
+email: "hiarc.official@gmail.com" # 대외 연락 담당자 이메일
 
 # Apply
 apply-form: "https://forms.gle/GREjuD8R5QZ4U91P8"
