--- a/_data/activities/studies.yaml
+++ b/_data/activities/studies.yaml
@@ -126,7 +126,7 @@
     - semester: "겨울방학"
       lists:
       - name: "고급 알고리즘 연합 스터디"
-        description: "2019년 겨울 방학 스터디는 서강 ICPC TEAM과 연합하여 매주 월, 목에 진행되었습니다.<br>by 박수현(서강대)"
+        description: "2019년 겨울 방학 스터디는 서강 ICPC TEAM과 연합하여 매주 월, 목에 진행되었습니다.<br>by 박수현(서강대), 이상원(서강대)"
         thumbnail: ""
         pictures: []
 
@@ -136,7 +136,7 @@
         pictures: []
 
       - name: "초급 알고리즘 연합 스터디"
-        description: "서강 ICPC TEAM과 수요일과 토요일에 모여서 진행하였습니다.<br>by 이재열, 김성민, 이태한(서강대),"
+        description: "서강 ICPC TEAM과 수요일과 토요일에 모여서 진행하였습니다.<br>by 이재열, 김성민, 이태한(서강대)"
         thumbnail: ""
         pictures: []
 
@@ -201,11 +201,6 @@
         thumbnail: ""
         pictures: []
 
-      - name: "콘솔 게임.. 추가음..."
-        description: "익숙한 콘솔 화면에서 테트리스를 만드는 내용을 목적으로 진행되다 터진 스터디입니다.<br>by 김성민"
-        thumbnail: ""
-        pictures: []
-
       - name: "자바 스터디"
         description: "기본적인 자바 지식부터 깊은 내용까지 두루두루 진행된 스터디<br>by 이동수"
         thumbnail: ""
@@ -213,11 +208,6 @@
 
       - name: "정보보안 스터디"
         description: "<br>by 신명준"
-        thumbnail: ""
-        pictures: []
-
-      - name: "탈 C++ 챌린지"
-        description: "PS를 C++로만 푸는 것에서 벗어나 파이썬, 자바를 이용해서 풀어보는 스터디<br>by 이재열"
         thumbnail: ""
         pictures: []
 
