--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ phone: "010-6375-7524"          # 대외 연락 담당자 전화번호
 email: "hiarc.official@gmail.com" # 대외 연락 담당자 이메일
 
 # Apply
-apply-form: "https://forms.gle/GREjuD8R5QZ4U91P8"
-apply-date: "2019년 9월 14일"
-joinable: false
+apply-form: "https://forms.gle/RuGoexsbVNaqsrDP8"
+apply-date: "2020년 3월 ??일"
+joinable: true
 
 # Category
 collections:
