--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ email: "hiarc.official@gmail.com" # 대외 연락 담당자 이메일
 
 # Apply
 apply-form: "https://forms.gle/RuGoexsbVNaqsrDP8"
+newbiy-apply-form: "https://forms.gle/jwTAFjgggzA3Hqr88"
 apply-date: "2020년 3월 ??일"
 joinable: true
 
