--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ email: "hiarc.official@gmail.com" # 대외 연락 담당자 이메일
 
 # Apply
 apply-form: "https://forms.gle/RuGoexsbVNaqsrDP8"
-newbiy-apply-form: "https://forms.gle/jwTAFjgggzA3Hqr88"
-apply-date: "2020년 3월 ??일"
+newbie-apply-form: "https://forms.gle/jwTAFjgggzA3Hqr88"
+apply-date: "신입생 2020년 3월 21일, 재학생 2020년 3월 1일"
 joinable: true
 
 # Category
