~까지까지를 ~까지로 수정

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ email: "hiarc.official@gmail.com" # 대외 연락 담당자 이메일
 # Apply
 apply-form: "https://forms.gle/RuGoexsbVNaqsrDP8"
 newbie-apply-form: "https://forms.gle/jwTAFjgggzA3Hqr88"
-apply-date: "신입생, 재학생 모두 2020년 3월 21일까지"
+apply-date: "신입생, 재학생 모두 2020년 3월 21일"
 joinable: true
 
 # Category
